infra/proxy/wled/led.wled.home/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: led-wled-home-proxy
  namespace: infra
subsets:
  - addresses:
      - ip: 10.0.1.100
    ports:
      - port: 80
