infra/proxy/wled/led.wled.home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: led-wled-home-proxy
  namespace: infra
spec:
  ports:
  - port: 80
    targetPort: 80
  clusterIP: None
