infra/proxy/wled/led.wled.home/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: led-wled-home-internal
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: led.wled.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: led-wled-home-proxy
            port:
              number: 80
  tls:
  - hosts:
    - led.wled.home
    secretName: led-wled-home-internal-tls
